// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Interpolate> acceptance test 1`] = `
[
  "Hello ",
  "Sébastien",
  " how are you ",
  <span>
    today
  </span>,
  "? Another ",
  "{unprovidedValue}",
  "!",
]
`;

exports[`interpolate acceptance test 1`] = `
[
  "Hello ",
  "Sébastien",
  " how are you ",
  <span>
    today
  </span>,
  "? Another ",
  "{unprovidedValue}",
  "!",
]
`;

exports[`interpolate placeholders with JSX values 1`] = `
[
  "Hello ",
  <b>
    Sébastien
  </b>,
  " how are you ",
  <span>
    today
  </span>,
  "?",
]
`;

exports[`interpolate placeholders with mixed vales 1`] = `
[
  "Hello ",
  "Sébastien",
  " how are you ",
  <span>
    today
  </span>,
  "?",
]
`;
